--- a/src/Squidd.Runner.ConsoleApp/Squidd.Runner.ConsoleApp.csproj
+++ b/src/Squidd.Runner.ConsoleApp/Squidd.Runner.ConsoleApp.csproj
@@ -49,6 +49,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CommunicationService.cs" />
+    <Compile Include="PowershellOutputEventArgs.cs" />
+    <Compile Include="PowerShellRunner.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RunManager.cs" />
