--- a/src/Squidd.Runner.ConsoleApp/Squidd.Runner.ConsoleApp.csproj
+++ b/src/Squidd.Runner.ConsoleApp/Squidd.Runner.ConsoleApp.csproj
@@ -57,17 +57,18 @@
   <ItemGroup>
     <Compile Include="Config\ApplicationSettings.cs" />
     <Compile Include="Global.cs" />
-    <Compile Include="Responders\FileStorageResponder.cs" />
+    <Compile Include="Handlers\FileStorageHandler.cs" />
     <Compile Include="Config\IApplicationSettings.cs" />
-    <Compile Include="Responders\InfoResponder.cs" />
-    <Compile Include="Responders\IResponder.cs" />
-    <Compile Include="Responders\PowershellResponder.cs" />
+    <Compile Include="Handlers\InfoHandler.cs" />
+    <Compile Include="Handlers\IHandler.cs" />
+    <Compile Include="Handlers\PowershellHandler.cs" />
     <Compile Include="SocketCommunicationService.cs" />
     <Compile Include="PowershellOutputEventArgs.cs" />
     <Compile Include="PowerShellRunner.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RunManager.cs" />
+    <Compile Include="StreamResponder.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
