--- a/src/Squidd.Runner/Squidd.Runner.csproj
+++ b/src/Squidd.Runner/Squidd.Runner.csproj
@@ -30,6 +30,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Castle.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <HintPath>..\packages\Castle.Core.4.0.0\lib\net45\Castle.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Castle.Windsor, Version=4.0.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <HintPath>..\packages\Castle.Windsor.4.0.0\lib\net45\Castle.Windsor.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
@@ -51,12 +57,20 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Config\IApplicationSettings.cs" />
+    <Compile Include="Config\IoCContainer.cs" />
     <Compile Include="Global.cs" />
     <Compile Include="Handlers\FileStorageHandler.cs" />
     <Compile Include="Handlers\IHandler.cs" />
     <Compile Include="Handlers\InfoHandler.cs" />
     <Compile Include="Handlers\PairHandler.cs" />
     <Compile Include="Handlers\PowershellHandler.cs" />
+    <Compile Include="Handlers\SessionCloseHandler.cs" />
+    <Compile Include="Handlers\SessionOpenHandler.cs" />
+    <Compile Include="Helpers\Authentication.cs" />
+    <Compile Include="Middleware\IMiddleware.cs" />
+    <Compile Include="Middleware\MethodSupportedMiddleware.cs" />
+    <Compile Include="Middleware\RunnerIsBusyMiddleware.cs" />
+    <Compile Include="Middleware\SessionMiddleware.cs" />
     <Compile Include="PowershellOutputEventArgs.cs" />
     <Compile Include="PowerShellRunner.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
