--- a/src/Squidd.Commander.Web/packages.config
+++ b/src/Squidd.Commander.Web/packages.config
@@ -2,7 +2,7 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net461" />
   <package id="AutoMapper" version="6.1.1" targetFramework="net461" />
-  <package id="bootstrap" version="3.3.7" targetFramework="net461" />
+  <package id="bootstrap" version="4.0.0-beta" targetFramework="net461" />
   <package id="Castle.Core" version="4.1.1" targetFramework="net461" />
   <package id="Castle.Windsor" version="4.0.0" targetFramework="net461" />
   <package id="Castle.Windsor.Web.Mvc" version="1.0.7" targetFramework="net461" />
@@ -40,6 +40,7 @@
   <package id="Modernizr" version="2.8.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
+  <package id="popper.js" version="1.12.3" targetFramework="net461" />
   <package id="Respond" version="1.4.2" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net461" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net461" />
