--- a/src/Squidd.Commander.Web/packages.config
+++ b/src/Squidd.Commander.Web/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Angular.UI.Bootstrap" version="2.5.0" targetFramework="net461" />
   <package id="Antlr" version="3.5.0.2" targetFramework="net461" />
   <package id="AutoMapper" version="6.1.1" targetFramework="net461" />
   <package id="bootstrap" version="4.0.0-beta" targetFramework="net461" />
@@ -7,8 +8,6 @@
   <package id="Castle.Windsor" version="4.0.0" targetFramework="net461" />
   <package id="Castle.Windsor.Web.Mvc" version="1.0.7" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
-  <package id="jQuery" version="3.1.1" targetFramework="net461" />
-  <package id="jQuery.Validation" version="1.16.0" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights" version="2.4.0" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.4.0" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.4.1" targetFramework="net461" />
@@ -25,7 +24,6 @@
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.7" targetFramework="net461" />
-  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="2.3.1" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.Owin" version="3.1.0" targetFramework="net461" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.1.0" targetFramework="net461" />
@@ -40,7 +38,6 @@
   <package id="Modernizr" version="2.8.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
-  <package id="popper.js" version="1.12.3" targetFramework="net461" />
   <package id="Respond" version="1.4.2" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net461" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net461" />
