--- a/src/Squidd.Commander.Web/Squidd.Commander.Web.csproj
+++ b/src/Squidd.Commander.Web/Squidd.Commander.Web.csproj
@@ -352,8 +352,8 @@
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
   </ItemGroup>
   <ItemGroup>
-    <TypeScriptCompile Include="tsScripts\app.ts" />
-    <TypeScriptCompile Include="tsScripts\boot.ts" />
+    <TypeScriptCompile Include="tsScripts\app\app.component.ts" />
+    <TypeScriptCompile Include="tsScripts\app\app.module.ts" />
     <TypeScriptCompile Include="tsScripts\main.ts" />
   </ItemGroup>
   <PropertyGroup>
